overflow-solved

--- a/index.css
+++ b/index.css
@@ -5,9 +5,12 @@
     font-family: "Abel", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
         Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
     list-style: none;
-    overflow-x: hidden;
 }
 
+
+body{
+    overflow-x: hidden;
+}
 /* navigation bar */
 
 header {
